examples/c/error-codes/violates-constraint/fatal/CV-TDG18-bad-static.output
CV-TDG18-bad-static.c:4:7: error: '_Thread_local' variables must have global storage
      _Thread_local int x;
      ^
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
